# proxie

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md  release-body-static.md
.github/workflows/: build.yml  cleanup-artifacts.yml  cleanup-pr-artifacts.yml  cleanup-releases.yml  release-beta.yml  release-official.yml
docs/: README.md  block-rules.md  connections.md  host-rules.md  interceptor.md  setup.md
src/: App.test.tsx  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cert.rs  lib.rs  main.rs  proxy.rs  state.rs  tls.rs  types.rs
src-tauri/tests/: proxy_e2e.rs  smoke.rs
src/components/: ConnectionsColumnPicker.tsx  Layout.test.tsx  Layout.tsx  UrlFilterDialog.tsx
src/lib/: codegen.test.ts  codegen.ts  har.test.ts  har.ts  version.test.ts  version.ts
src/pages/: BlockRulesPage.more.test.tsx  BlockRulesPage.test.tsx  BlockRulesPage.tsx  ConnectionsPage.export.test.tsx  ConnectionsPage.more.test.tsx  ConnectionsPage.test.tsx  ConnectionsPage.tsx  HostRulesPage.test.tsx  HostRulesPage.tsx  InterceptorPage.test.tsx  InterceptorPage.tsx  SetupPage.test.tsx  SetupPage.tsx
src/test/: setup.ts
src/test/integration/: connections.test.tsx  host-rules.test.tsx  proxy-toggle.test.tsx  setup.test.tsx
