[package]
name = "proxie"
version = "0.1.3"
description = "A lightweight HTTPS proxy interceptor"
authors = ["Sy Le"]
edition = "2021"

[lib]
name = "proxie_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
