[package]
name = "proxie"
version = "0.4.3"
description = "A lightweight HTTPS proxy interceptor"
authors = ["Sy Le"]
edition = "2021"

[lib]
name = "proxie_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Response-body decoding (v0.4.3): proxies see gzip / deflate / brotli /
# chunked encoded payloads in the wild. Decompressing them server-side keeps
# the Connections drawer readable instead of dumping replacement-character
# soup. base64 lets us safely round-trip binary bodies (images, videos,
# fonts, etc.) into the frontend as `data:` URIs.
flate2 = "1"
brotli = "8"
base64 = "0.22"

# Test-only dependencies for the integration suite under `tests/`. These
# never ship in the production binary — `cargo build` ignores them.
[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
